[tool.poetry]
name = "madewithml"
version = "0.1.0"
description = ""
authors = ["jefferson-norberto2 <jmn@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^75.3.0"
wheel = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
